--- a/pom.xml
+++ b/pom.xml
@@ -85,38 +85,23 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-lambda-java-core</artifactId>
-      <version>1.1.0</version>
-    </dependency>
-    
-    <dependency>
-	    <groupId>com.amazonaws</groupId>
-	    <artifactId>aws-lambda-java-events</artifactId>
-	    <version>2.2.2</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb -->
-	<dependency>
-	    <groupId>com.amazonaws</groupId>
-	    <artifactId>aws-java-sdk-dynamodb</artifactId>
-	    <version>1.11.52</version>
-	</dependency>
-    
-    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-core -->
-	<dependency>
-	    <groupId>com.amazonaws</groupId>
-	    <artifactId>aws-java-sdk-core</artifactId>
-	    <version>1.11.24</version>
-	</dependency>
-    
-    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-lambda -->
-	<dependency>
-	    <groupId>com.amazonaws</groupId>
-	    <artifactId>aws-java-sdk-lambda</artifactId>
-	    <version>1.11.475</version>
-	</dependency>
+		
+		<dependency>
+			<artifactId>aws-java-sdk-core</artifactId>
+			<groupId>com.amazonaws</groupId>
+			<optional>false</optional>
+
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-lambda-java-events</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-lambda-java-core</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.json/json -->
 	<dependency>
