--- a/pom.xml
+++ b/pom.xml
@@ -35,33 +35,6 @@
           </execution>
         </executions>
       </plugin>
-<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-dependency-plugin</artifactId>
-			<version>3.1.0</version>
-			<executions>
-				<execution>
-					<id>copy</id>
-					<phase>package</phase>
-					<goals>
-						<goal>copy</goal>
-					</goals>
-				</execution>
-			</executions>
-			<configuration>
-				<artifactItems>
-					<artifactItem>
-						<groupId>com.amazonaws.lambda</groupId>
-						<artifactId>consentmgtapi</artifactId>
-						<version>1.0.0</version>
-						<type>jar</type>
-						<overWrite>false</overWrite>
-						<outputDirectory>${project.build.directory}/dist</outputDirectory>
-					</artifactItem>
-				</artifactItems>
-				<overWriteSnapshots>true</overWriteSnapshots>
-			</configuration>
-</plugin>
     </plugins>
   </build>
 
@@ -85,29 +58,45 @@
       <scope>test</scope>
     </dependency>
 
-		
-		<dependency>
-			<artifactId>aws-java-sdk-core</artifactId>
-			<groupId>com.amazonaws</groupId>
-			<optional>false</optional>
-
-		</dependency>
-		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-lambda-java-events</artifactId>
-			<version>1.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-lambda-java-core</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-lambda-java-core</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-core -->
+	<dependency>
+	    <groupId>com.amazonaws</groupId>
+	    <artifactId>aws-java-sdk-core</artifactId>
+	    <optional>false</optional>
+	</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-lambda -->
+	<dependency>
+	    <groupId>com.amazonaws</groupId>
+	    <artifactId>aws-java-sdk-lambda</artifactId>
+	    <version>1.11.475</version>
+	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.json/json -->
 	<dependency>
 	    <groupId>org.json</groupId>
 	    <artifactId>json</artifactId>
 	    <version>20180813</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpclient</artifactId>
+	    <version>4.1</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>com.llm.Sigv4Util</groupId>
+        <artifactId>Sigv4Util</artifactId>
+        <version>1.0.0</version>
+		<scope>system</scope>
+		<systemPath>${basedir}/lib/Sigv4Util-1.0.0.jar</systemPath>
 	</dependency>
 		
   </dependencies>
