--- a/pom.xml
+++ b/pom.xml
@@ -11,30 +11,57 @@
   </properties>
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <encoding>UTF-8</encoding>
-          <forceJavacCompilerUse>true</forceJavacCompilerUse>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>3.0.0</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+    	<plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        <version>3.6.0</version>
+	        <configuration>
+	          <source>1.8</source>
+	          <target>1.8</target>
+	          <encoding>UTF-8</encoding>
+	          <forceJavacCompilerUse>true</forceJavacCompilerUse>
+	        </configuration>
+      	</plugin>
+      	<plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-shade-plugin</artifactId>
+	        <version>3.0.0</version>
+	        <executions>
+	          <execution>
+	            <phase>package</phase>
+	            <goals>
+	              <goal>shade</goal>
+	            </goals>
+	          </execution>
+	        </executions>
+		</plugin>
+      	<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-dependency-plugin</artifactId>
+			<version>3.1.0</version>
+			<executions>
+				<execution>
+					<id>copy</id>
+					<phase>package</phase>
+					<goals>
+						<goal>copy</goal>
+					</goals>
+				</execution>
+			</executions>
+			<configuration>
+				<artifactItems>
+					<artifactItem>
+						<groupId>com.amazonaws.lambda</groupId>
+						<artifactId>consentmgtapi</artifactId>
+						<version>1.0.0</version>
+						<type>jar</type>
+						<overWrite>false</overWrite>
+						<outputDirectory>${project.build.directory}/dist</outputDirectory>
+					</artifactItem>
+				</artifactItems>
+				<overWriteSnapshots>true</overWriteSnapshots>
+			</configuration>
+		</plugin>
     </plugins>
   </build>
 
